test/classes/nilability/array-with-nonnilable-elttype.chpl

var x1: [1..3] owned object;
var x2: [1..3] shared object;
var x3: [1..3] borrowed object;
var x4: [1..3] unmanaged object;
